--- a/Sunduk.PWA/Components/CAM/ContourComponent.razor
+++ b/Sunduk.PWA/Components/CAM/ContourComponent.razor
@@ -176,12 +176,12 @@
 
 @code {
 
-    public Variant FieldsVariant { get => Variant.Filled; }
-    public Variant ButtonsVariant { get => Variant.Filled; }
-    public bool FieldsUnderline { get => false; }
-    public bool FirstFieldsUnderline { get => false; }
-    public int ButtonSize { get => 48 ; }
-    public int FieldsWidth { get => 87 ; }
+    public Variant FieldsVariant => Variant.Filled;
+    public Variant ButtonsVariant => Variant.Filled;
+    public bool FieldsUnderline => false;
+    public bool FirstFieldsUnderline => false;
+    public int ButtonSize => 48;
+    public int FieldsWidth => 87;
 
     public int ElementIndex { get; set; }
 
