--- a/Sunduk.PWA/Components/Converters/PointCoordinatesComponent.razor
+++ b/Sunduk.PWA/Components/Converters/PointCoordinatesComponent.razor
@@ -40,7 +40,7 @@
 
     public double? X
     {
-        get { return _X; }
+        get => _X;
         set
         {
             _X = value;
@@ -65,7 +65,7 @@
 
     public double? Y
     {
-        get { return _Y; }
+        get => _Y;
         set
         {
             _Y = value;
@@ -92,7 +92,7 @@
 
     public double? Radius
     {
-        get { return radius; }
+        get => radius;
         set
         {
             radius = value;
@@ -137,7 +137,7 @@
 
     public double? Angle
     {
-        get { return angle; }
+        get => angle;
         set
         {
             angle = value;
