--- a/Sunduk.PWA/Components/Stuff/NippleComponent.razor
+++ b/Sunduk.PWA/Components/Stuff/NippleComponent.razor
@@ -184,33 +184,33 @@
     public Radius RadiusType { get; set; } = Radius.External;
 
     public string _NippleDiameter { get; set; } = string.Empty;
-    public double NippleDiameter { get => Util.GetDouble(_NippleDiameter); }
+    public double NippleDiameter => Util.GetDouble(_NippleDiameter);
 
     public string _ArcCenter { get; set; } = string.Empty;
-    public double ArcCenter { get => Util.GetDouble(_ArcCenter); }
+    public double ArcCenter => Util.GetDouble(_ArcCenter);
 
     public string _RadiusSize { get; set; } = string.Empty;
-    public double RadiusSize { get => NippleDiameter / 2; }
+    public double RadiusSize => NippleDiameter / 2;
 
     public string _InsertRadius { get; set; } = string.Empty;
-    public double InsertRadius { get => Util.GetDouble(_InsertRadius); }
+    public double InsertRadius => Util.GetDouble(_InsertRadius);
 
     public string _NippleBlunt { get; set; } = "0.3";
-    public double NippleBlunt { get => Util.GetDouble(_NippleBlunt); }
-    public double NippleBluntRadius { get => NippleBlunt + InsertRadius; }
+    public double NippleBlunt => Util.GetDouble(_NippleBlunt);
+    public double NippleBluntRadius => NippleBlunt + InsertRadius;
 
-    public double NippelStartPointX { get => Math.Sqrt(Math.Pow(RadiusSize, 2) - Math.Pow(ArcCenter, 2)); }
-    public double NippelStartDiameter { get => NippelStartPointX * 2; }
+    public double NippelStartPointX => Math.Sqrt(Math.Pow(RadiusSize, 2) - Math.Pow(ArcCenter, 2));
+    public double NippelStartDiameter => NippelStartPointX * 2;
 
-    public double Angle { get => Math.Atan(ArcCenter / NippelStartPointX).Degrees();}
+    public double Angle => Math.Atan(ArcCenter / NippelStartPointX).Degrees();
 
-    public double XRadiusShift { get => 2 * (NippelStartPointX / ArcCenter) * (InsertRadius - InsertRadius / Math.Tan((90 - (90 - Angle) / 2).Radians())); }
-    public double StartDiamWithShift { get => NippelStartDiameter - XRadiusShift; }
+    public double XRadiusShift => 2 * (NippelStartPointX / ArcCenter) * (InsertRadius - InsertRadius / Math.Tan((90 - (90 - Angle) / 2).Radians()));
+    public double StartDiamWithShift => NippelStartDiameter - XRadiusShift;
 
-    public double RadiusDepth { get => ArcCenter + InsertRadius; }
-    public double FullRadius { get => RadiusSize + InsertRadius; }
+    public double RadiusDepth => ArcCenter + InsertRadius;
+    public double FullRadius => RadiusSize + InsertRadius;
 
-    public int ExampleLines { get => RadiusExample.Count(f => f == '\n') + 1; }
+    public int ExampleLines => RadiusExample.Count(f => f == '\n') + 1;
 
     string GetBluntedShape()
     {
