--- a/Sunduk.PWA/Components/CAM/AddSequenceComponent.razor
+++ b/Sunduk.PWA/Components/CAM/AddSequenceComponent.razor
@@ -362,15 +362,15 @@
                         </MudSelect>
                     </MudItem>
                 }
-                <MudItem xs="6" sm="6" md="(ThreadStandart is ThreadStandart.Metric or ThreadStandart.Trapeziodal ? 6 : 4)">
+                <MudItem xs="6" sm="6" md="(ThreadStandart is ThreadStandart.Metric or ThreadStandart.Trapezoidal ? 6 : 4)">
                     <MudSelect Label="Стандарт" T="ThreadStandart" Variant="Variant.Filled" Margin="Margin.Dense" @bind-Value="ThreadStandart">
                         <MudSelectItem Value="@(ThreadStandart.Metric)">Метрическая 60° (М)</MudSelectItem>
                         <MudSelectItem Value="@(ThreadStandart.BSPP)">Трубная цилиндрическая 55° (Tr)</MudSelectItem>
-                        <MudSelectItem Value="@(ThreadStandart.Trapeziodal)">Трапецеидальная 30° (G)</MudSelectItem>
+                        <MudSelectItem Value="@(ThreadStandart.Trapezoidal)">Трапецеидальная 30° (G)</MudSelectItem>
                         <MudSelectItem Value="@(ThreadStandart.NPT)">Коническая 60° (K)</MudSelectItem>
                     </MudSelect>
                 </MudItem>
-                <MudItem xs="6" sm="6" md="(ThreadStandart is ThreadStandart.Metric or ThreadStandart.Trapeziodal ? 6 : 4)">
+                <MudItem xs="6" sm="6" md="(ThreadStandart is ThreadStandart.Metric or ThreadStandart.Trapezoidal ? 6 : 4)">
                     <MudSelect Label="Тип" T="CuttingType" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnThreadCuttingTypeChanged">
                         <MudSelectItem Value="@(CuttingType.External)">Наружная</MudSelectItem>
                         <MudSelectItem Value="@(CuttingType.Internal)">Внутренняя</MudSelectItem>
@@ -380,7 +380,7 @@
                 {
                 <MudItem xs="6" sm="6" md="4">
                     <MudSelect Label="Шаблон" T="string" Value="CurrentThreadTemplate" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnTemplateChanged">
-                        @foreach (string item in Thread.bsppTemplates)
+                        @foreach (string item in Thread.BsppTemplates)
                         {
                             <MudSelectItem Value="@(item)">
                                 <MudText>@item</MudText>
@@ -393,7 +393,7 @@
                 {
                 <MudItem xs="6" sm="6" md="4">
                     <MudSelect Label="Шаблон" T="string" Value="CurrentThreadTemplate" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnTemplateChanged">
-                        @foreach (string item in Thread.nptTemplates)
+                        @foreach (string item in Thread.NptTemplates)
                         {
                             <MudSelectItem Value="@(item)">
                                 <MudText>@item</MudText>
@@ -763,12 +763,12 @@
         }
         else if (ThreadStandart == ThreadStandart.BSPP)
         {
-            Thread.GetBSPPValues(CurrentThreadTemplate, out string diameter, out string pitch);
+            Thread.GetBsppValues(CurrentThreadTemplate, out string diameter, out string pitch);
             _ThreadDiameter = diameter;
             _ThreadPitch = pitch;
             ThreadNPTPlane = 0;
         }
-        else if (ThreadStandart == ThreadStandart.Trapeziodal)
+        else if (ThreadStandart == ThreadStandart.Trapezoidal)
         {
             Thread.GetTrapezoidalValues(CurrentThreadTemplate, out string diameter, out string pitch);
             _ThreadDiameter = diameter;
@@ -777,7 +777,7 @@
         }
         else if (ThreadStandart == ThreadStandart.NPT)
         {
-            Thread.GetNPTValues(CurrentThreadTemplate, out string externalDiameter, out string internalDiameter, out string pitch, out double planeLength, out double threadLength);
+            Thread.GetNptValues(CurrentThreadTemplate, out string externalDiameter, out string internalDiameter, out string pitch, out double planeLength, out double threadLength);
             _ThreadDiameter = externalDiameter;
             _ThreadPitch = pitch;
             _ThreadEnd = (-threadLength).ToPrettyString(); // наверно тоже строку стоит возвращать
