--- a/Sunduk.PWA/Components/CAM/ContourComponent.razor
+++ b/Sunduk.PWA/Components/CAM/ContourComponent.razor
@@ -2,7 +2,7 @@
 
 <MudField Label="Контур" Variant="Variant.Filled" Margin="Margin.Dense" DisableUnderLine="true">
     <MudGrid Spacing="1">
-        <MudItem xs=12 lg=6>
+        <MudItem xs="12" lg="6">
             <MudList DisableGutters="true" Dense="true">
                 @foreach (var element in Contour)
                 {
@@ -139,35 +139,38 @@
                     @($"MedX{MediumX} MedZ{MediumZ}")
                 </MudText>
                 <MudText>
-                    @($"H{ContourHeigh} W{ContourWidth}")
+                    @($"H{ContourHeight} W{ContourWidth}")
                 </MudText>*@
             </MudList>
         </MudItem>
-        <MudItem xs=12 lg=6>
+        <MudItem xs="12" lg="6">
             <MudPaper Outlined="true" Class="mt-1">
-                <center>
-                    <svg height="@FieldHeight" width="600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="@($"{0} {0} {ContourWidth} {ContourHeigh}")">
+                <div style="text-align: center;" >
+                    <svg height="@FieldHeight" width="600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="@($"{0} {0} {ContourWidth} {ContourHeight}")">
                         <defs>
-                            <g height="@(ContourHeigh)" width="@(ContourWidth)" id="contour">
-                                <path stroke="#FF5722" stroke-width="2" fill="none"
-                                    d="@Path"/>
-                            </g>
+                            @if (Contour[0].X != null && Contour[0].Z != null)
+                            {
+                                <g height="@(ContourHeight)" width="@(ContourWidth)" id="contour">
+                                    <path stroke="#FF5722" stroke-width="2" fill="none"
+                                          d="@Path"/>
+                                </g>
+                            }
                             <g height="50" width="50" id="cs">
                                 <path stroke="white" stroke-width="1" fill="none"
-                                    d="M 0,-50 L 0,50 
+                                      d="M 0,-50 L 0,50 
                                        M -50,0 L 50,0 
                                        M -3,-42 L 0,-50 L 3,-42 
                                        M 42,-3 L 50,0 L 42,3"/>
                             </g>
                         </defs>
-                        <g transform="translate(@(Math.Round(ContourWidth / 2 - (MediumZ ?? 0) * 4)),@(Math.Round(ContourHeigh / 2 + (MediumX ?? 0) * 2)))">
+                        <g transform="translate(@(Math.Round(ContourWidth / 2 - (MediumZ ?? 0) * 4)),@(Math.Round(ContourHeight / 2 + (MediumX ?? 0) * 2)))">
                             <use xlink:href="#contour"/>
                             <use xlink:href="#cs"/>
                             <text x="4" y="-33" fill="white" style="font-family: 'Roboto Mono', monospace;" font-size="10">X+</text>
                             <text x="35" y="12" fill="white" style="font-family: 'Roboto Mono', monospace;" font-size="10">Z+</text>
                         </g>
                     </svg>
-                </center>
+                </div>
             </MudPaper>
         </MudItem>
     </MudGrid>
@@ -196,46 +199,46 @@
 
     public double? MaxHeight { get
         {
-            var minX = Contour.Select(x => x.X).Min();
+            double? minX = Contour.Select(x => x.X).Min();
             if (minX > 0) minX = 0;
-            var maxX = Contour.Select(x => x.X).Max();
+            double? maxX = Contour.Select(x => x.X).Max();
             return maxX - minX;
         } }
 
     public double? MediumX { get
         {
-            var minX = Contour.Select(x => x.X).Min();
+            double? minX = Contour.Select(x => x.X).Min();
             if (minX > 0) minX = 0;
-            var maxX = Contour.Select(x => x.X).Max();
+            double? maxX = Contour.Select(x => x.X).Max();
             return (maxX + minX) / 2;
         } }
 
     public double? MaxLength { get
         {
-            var minZ = Contour.Select(x => x.Z).Min();
-            var maxZ = Contour.Select(x => x.Z).Max();
+            double? minZ = Contour.Select(x => x.Z).Min();
+            double? maxZ = Contour.Select(x => x.Z).Max();
             return maxZ - minZ;
         } }
 
     public double? MediumZ { get
         {
-            var minZ = Contour.Select(x => x.Z).Min();
-            var maxZ = Contour.Select(x => x.Z).Max();
+            double? minZ = Contour.Select(x => x.Z).Min();
+            double? maxZ = Contour.Select(x => x.Z).Max();
             return (maxZ + minZ) / 2;
         } }
 
-    public double ContourHeigh { get
+    public double ContourHeight { get
         {
-            double maxHeigh = 200;
-            var tempCalc = (MaxHeight ?? 0) * 2 + 20;
-            if (tempCalc > maxHeigh) maxHeigh = tempCalc;
-            return Math.Abs(maxHeigh);
+            double maxHeight = 200;
+            double tempCalc = (MaxHeight ?? 0) * 2 + 20;
+            if (tempCalc > maxHeight) maxHeight = tempCalc;
+            return Math.Abs(maxHeight);
         } }
 
     public double ContourWidth { get
         {
             double maxWidth = 400;
-            var tempCalc = (MaxLength ?? 0) * 6;
+            double tempCalc = (MaxLength ?? 0) * 6;
             if (tempCalc > maxWidth) maxWidth = tempCalc;
             return Math.Abs(maxWidth);
         } }
@@ -248,33 +251,34 @@
 
     public string Path { get
         {
+            if (Contour[0].X is null && Contour[0].Z is null) return string.Empty;
             string path = string.Empty;
             foreach (var element in Contour)
             {
                 switch (element)
                 {
                     case Point point:
+                        path += $"M {(point.Z * 4).ToString().Replace(",", ".")},{(-point.X / 2 * 4).ToString().Replace(",", ".")} ";
                         if (point.Blunt > 0 && Contour.Count > Contour.IndexOf(point) + 1)
                         {
-                            path += $"M {(point.Z*4).ToString().Replace(",",".")},{(-point.X/2*4).ToString().Replace(",",".")} ";
-                            path += $"A{(point.Blunt*4).ToString().Replace(",",".")},{(point.Blunt*4).ToString().Replace(",",".")},0,0{(point.Z > (Contour[Contour.IndexOf(point) + 1].Z) ? 0 : 1)},{(point.Z > (Contour[Contour.IndexOf(point) + 1].Z) ? -point.Blunt*4 : point.Blunt*4).ToString().Replace(",",".")},{(-Contour[Contour.IndexOf(point) + 1].X/2*4).ToString().Replace(",",".")} ";
-                        }
-                        else
-                        {
-                            path += $"M {(point.Z*4).ToString().Replace(",",".")},{(-point.X/2*4).ToString().Replace(",",".")} ";
+                            path += $"A{(point.Blunt * 4).ToString(CultureInfo.InvariantCulture).Replace(",", ".")},{(point.Blunt * 4).ToString(CultureInfo.InvariantCulture).Replace(",", ".")},0,0{(point.Z > (Contour[Contour.IndexOf(point) + 1].Z) ? 0 : 1)},{(point.Z > (Contour[Contour.IndexOf(point) + 1].Z) ? -point.Blunt * 4 : point.Blunt * 4).ToString(CultureInfo.InvariantCulture).Replace(",", ".")},{(-Contour[Contour.IndexOf(point) + 1].X / 2 * 4).ToString().Replace(",", ".")} ";
                         }
                         break;
                     case Line line:
-                        path += $"L {(line.Z*4).ToString().Replace(",",".")},{(-line.X/2*4).ToString().Replace(",",".")} ";
+                        double? tempLineX = line.X ?? Contour[Contour.IndexOf(line) - 1].X;
+                        double? tempLineZ = line.Z ?? Contour[Contour.IndexOf(line) - 1].Z;
+                        path += $"L {(tempLineZ * 4).ToString().Replace(",", ".")},{(-tempLineX / 2 * 4).ToString().Replace(",", ".")} ";
                         break;
                     case Arc arc:
+                        double? tempArcX = arc.X ?? Contour[Contour.IndexOf(arc) - 1].X;
+                        double? tempArcZ = arc.Z ?? Contour[Contour.IndexOf(arc) - 1].Z;
                         if (ValidArc(Contour.IndexOf(arc)))
                         {
-                            path += $"A{(arc.Radius*4).ToString().Replace(",",".")},{(arc.Radius*4).ToString().Replace(",",".")},0,0{(arc.Direction is Infrastructure.Direction.CCW ? 0 : 1)},{(arc.Z*4).ToString().Replace(",",".")},{(-arc.X/2*4).ToString().Replace(",",".")} ";
+                            path += $"A{(arc.Radius * 4).ToString(CultureInfo.InvariantCulture).Replace(",", ".")},{(arc.Radius * 4).ToString(CultureInfo.InvariantCulture).Replace(",", ".")},0,0{(arc.Direction is Infrastructure.Direction.CCW ? 0 : 1)},{(tempArcZ * 4).ToString().Replace(",", ".")},{(-tempArcX / 2 * 4).ToString().Replace(",", ".")} ";
                         }
                         else
                         {
-                            path += $"L {(arc.Z*4).ToString().Replace(",",".")},{(-arc.X/2*4).ToString().Replace(",",".")} ";
+                            path += $"L {(tempArcZ * 4).ToString().Replace(",", ".")},{(-tempArcX / 2 * 4).ToString().Replace(",", ".")} ";
                         }
                         break;
                 }
@@ -299,24 +303,21 @@
     {
         if (type is ElementType.Line)
         {
-            Contour[index] = new Line(Contour[index].X, Contour[index].Z, 0, (Contour[index] as Arc).Radius);
+            Contour[index] = new Line(Contour[index].X, Contour[index].Z, 0, ((Contour[index] as Arc)!).Radius);
         }
     }
 
     string ContourElementIcon(Element element)
     {
-        switch (element)
+        return element switch
         {
-            case Line:
-                return Icons.Material.Filled.ArrowDropDown;
-            case Arc arc:
-                return arc.Direction is Infrastructure.Direction.CW ? Icons.Material.Filled.RotateRight : Icons.Material.Filled.RotateLeft;
-            default:
-                return Icons.Material.Filled.ArrowDropDown;
-        }
+            Line => Icons.Material.Filled.ArrowDropDown,
+            Arc arc => arc.Direction is Infrastructure.Direction.CW ? Icons.Material.Filled.RotateRight : Icons.Material.Filled.RotateLeft,
+            _ => Icons.Material.Filled.ArrowDropDown
+            };
     }
 
-    string BluntLabel(Line line)
+    static string BluntLabel(Line line)
     {
         return line.BluntType switch
         {
@@ -328,13 +329,13 @@
 
     bool ValidArc(int index)
     {
-        var radius = (Contour[index] as Arc).Radius;
+        if (index >= Contour.Count || index <= 0) return false;
+        double radius = ((Contour[index] as Arc)!).Radius;
         if (radius <= 0) return false; 
-        var xDifference = (Contour[index].X - Contour[index - 1].X) / 2;
-        var zDifference = Contour[index].Z - Contour[index - 1].Z;
-        var length = Math.Sqrt(Math.Pow(xDifference ?? 0, 2) + Math.Pow(zDifference ?? 0, 2));
-        if (radius * 2 < length) return false;
-        return true;
+        double? xDifference = (Contour[index].X - Contour[index - 1].X) / 2;
+        double? zDifference = Contour[index].Z - Contour[index - 1].Z;
+        double length = Math.Sqrt(Math.Pow(xDifference ?? 0, 2) + Math.Pow(zDifference ?? 0, 2));
+        return !(radius * 2 < length);
     }
 
     void CalculateElement(int index)
@@ -347,15 +348,13 @@
                 case Point point:
                     if (point.Blunt >= 0 &&
                         point.X is null &&
-                        Contour[index + 1] is Line nextLineX &&
-                        nextLineX.X != null)
+                        Contour[index + 1] is Line {X: { } } nextLineX)
                     {
                         point.X = nextLineX.X - point.Blunt * 2;
                     }
                     if (point.Blunt >= 0 &&
                         point.Z is null &&
-                        Contour[index + 1] is Line nextLineZ &&
-                        nextLineZ.Z != null)
+                        Contour[index + 1] is Line {Z: { } })
                     {
                         point.Z = 0;
                     }
